--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,260 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search {
+  width: 35vh;
+  height: 5vh;
+  margin: 2vh;
+  border-radius: 1.5vh;
+  border-color: #366db1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.PokemonList {
+  background-image: linear-gradient(
+    to right bottom,
+    #c70303,
+    #d42e26,
+    #de4842,
+    #e75f5c,
+    #ee7575
+  );
+  min-height: 75vh;
+  max-width: 55vh;
+  width: 100%;
+  padding-bottom: 20px;
+  border: 1px solid black;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  border-radius: 1vh;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-leds,
+.leds-small {
+  display: flex;
+}
+
+.led {
+  width: 3vh;
+  height: 3vh;
+  margin: 1vh;
+  margin-top: 1.5vh;
+  border: 2px solid #f9f9f9;
+  border-radius: 50%;
+  background-image: linear-gradient(
+    to right top,
+    #355ca5,
+    #3c67b8,
+    #4372cb,
+    #4a7dde,
+    #5289f2
+  );
+  position: relative;
+}
+
+.led-large {
+  display: inline-flex;
+  background-color: white;
+  padding: 3px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 2px solid black;
+  margin: 3vh;
+  width: 6vh;
+  height: 6vh;
+}
+
+.mirror {
+  width: 5.5vh;
+  height: 5.5vh;
+  border: 2px solid black;
+  border-radius: 50%;
+  background-image: radial-gradient(
+    circle,
+    #f2db40,
+    #ecc617,
+    #ecbd16,
+    #ecb417,
+    #edbe52
+  );
+  position: relative;
+}
+
+.pokedex_line {
+  width: 95%;
+  max-width: 54vh;
+  margin-top: -5vh;
+}
+
+.container-display {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.display {
+  border: 2px solid black;
+  background-color: #1f5156;
+  border-bottom-left-radius: 4vh;
+  height: 35vh;
+  width: 43vh;
+  margin-top: 2vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display-screen {
+  background-image: linear-gradient(
+    to left top,
+    #ffffff,
+    #ebeafa,
+    #d3d7f6,
+    #b7c5f2,
+    #95b4ee
+  );
+  border: 1px solid black;
+  width: 40vh;
+  height: 28vh;
+  margin-top: 10px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-left,
+.btn-right .btn-random {
+  margin: 1.5vh;
+  align-content: center;
+}
+
+.btn-left {
+  background-image: linear-gradient(
+    to right top,
+    #202225,
+    #38393b,
+    #515253,
+    #6c6c6d,
+    #878787
+  );
+  width: 5vh;
+  height: 5vh;
+  border-bottom-left-radius: 2.2vh;
+  border-top-left-radius: 2.2vh;
+  border-top-right-radius: 1vh;
+  border-bottom-right-radius: 1vh;
+}
+
+.btn-right {
+  background-image: linear-gradient(
+    to right top,
+    #202225,
+    #38393b,
+    #515253,
+    #6c6c6d,
+    #878787
+  );
+  width: 5vh;
+  height: 5vh;
+  border-bottom-left-radius: 1vh;
+  border-top-left-radius: 1vh;
+  border-top-right-radius: 2.2vh;
+  border-bottom-right-radius: 2.2vh;
+}
+
+.btn-random {
+  background-image: linear-gradient(
+    to right top,
+    #202225,
+    #38393b,
+    #515253,
+    #6c6c6d,
+    #878787
+  );
+  width: 12vh;
+  height: 5vh;
+  border-radius: 2vh;
+  margin-right: 5vh;
+  color: #cbcbf8;
+}
+
+.material-symbols-outlined {
+  display: flex;
+  justify-content: center;
+  font-size: 3.8vh;
+  color: #cbcbf8;
+}
+
+.pokemon {
+  width: 23vh;
+  height: 23vh;
+}
+
+.container-description {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.container-description p {
+  display: flex;
+  margin: 1vh;
+  text-align: center;
+  width: 11vh;
+  font-size: 2.1vh;
+  font-weight: 500;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.type {
+  background-image: linear-gradient(
+    to left top,
+    #ffdd0f,
+    #fce215,
+    #f9e81a,
+    #f6ed21,
+    #f2f227
+  );
+}
+
+.ability {
+  background-image: linear-gradient(
+    to right bottom,
+    #0fff2e,
+    #11f32c,
+    #12e729,
+    #13db27,
+    #14cf25
+  );
+}
+.span {
+  width: 102%;
+  height: auto;
+  min-height: 3vh;
+  border-block-end-color: inherit;
+  border-radius: 1vh;
+  color: #090606;
+  border-style: soli;
 }
